--- a/packages/antd/package.json
+++ b/packages/antd/package.json
@@ -95,5 +95,6 @@
   "homepage": "https://github.com/rjsf-team/react-jsonschema-form",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "dependencies": {}
 }
