--- a/packages/bootstrap-4/package.json
+++ b/packages/bootstrap-4/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@visma/rjsf-bootstrap-4",
-  "version": "2.5.1",
+  "version": "2.5.1-formula.1",
   "main": "dist/index.js",
   "module": "dist/bootstrap-4.esm.js",
   "typings": "dist/index.d.ts",
@@ -28,13 +28,13 @@
     "@babel/plugin-transform-modules-commonjs": "^7.8.3",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@visma/rjsf-core": "^2.5.1",
     "@types/jest": "^24.0.15",
     "@types/json-schema": "^7.0.7",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-test-renderer": "^16.9.2",
     "@types/sinon": "^9.0.0",
+    "@visma/rjsf-core": "^2.5.1-formula.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.8.6",
