--- a/packages/fluent-ui/package.json
+++ b/packages/fluent-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@visma/rjsf-fluent-ui",
-  "version": "2.5.1",
+  "version": "2.5.1-formula.1",
   "main": "dist/index.js",
   "module": "dist/fluent-ui.esm.js",
   "typings": "dist/index.d.ts",
@@ -31,7 +31,6 @@
     "@fluentui/react": "^7.114.2",
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
-    "@visma/rjsf-core": "^2.5.1",
     "@types/jest": "^24.0.15",
     "@types/json-schema": "^7.0.7",
     "@types/lodash": "^4.14.152",
@@ -39,6 +38,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-test-renderer": "^16.9.2",
     "@types/sinon": "^9.0.0",
+    "@visma/rjsf-core": "^2.5.1-formula.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.0",
     "react-test-renderer": "^16.13.1",
