--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@visma/rjsf-material-ui",
-  "version": "2.5.1",
+  "version": "2.5.1-formula.1",
   "main": "dist/index.js",
   "module": "dist/material-ui.esm.js",
   "typings": "dist/index.d.ts",
@@ -27,13 +27,13 @@
     "@babel/preset-react": "^7.0.0",
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
-    "@visma/rjsf-core": "^2.5.1",
     "@types/jest": "^24.0.15",
     "@types/json-schema": "^7.0.7",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-test-renderer": "^16.9.2",
     "@types/sinon": "^9.0.0",
+    "@visma/rjsf-core": "^2.5.1-formula.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-test-renderer": "^16.13.1",
@@ -65,6 +65,5 @@
     "type": "git",
     "url": "git+https://github.com/rjsf-team/react-jsonschema-form.git"
   },
-  "license": "Apache-2.0",
-  "dependencies": {}
+  "license": "Apache-2.0"
 }
