--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -16,7 +16,7 @@
   "peerDependencies": {
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
-    "@visma/rjsf-core": "^2.0.0",
+    "@visma/rjsf-core": "^2.0.0 || ^2.5.1-formula.5",
     "react": ">=16"
   },
   "devDependencies": {
