--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -39,7 +39,8 @@
     "node": ">=12"
   },
   "peerDependencies": {
-    "react": ">=16"
+    "react": ">=16 || ^17.0.0-0",
+    "react-intl": "^5.0.0"
   },
   "dependencies": {
     "@types/json-schema": "^7.0.7",
@@ -49,7 +50,6 @@
     "jsonpointer": "^4.0.1",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
-    "react-intl": "^5.18.1",
     "react-is": "^16.9.0",
     "shortid": "^2.2.14"
   },
