Replace shortid with nanoid

--- a/packages/antd/package.json
+++ b/packages/antd/package.json
@@ -63,6 +63,7 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
+    "nanoid": "^3.1.23",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-test-renderer": "^16.13.1",
@@ -95,6 +96,5 @@
   "homepage": "https://github.com/rjsf-team/react-jsonschema-form",
   "publishConfig": {
     "access": "public"
-  },
-  "dependencies": {}
+  }
 }
