--- a/packages/fluent-ui/package.json
+++ b/packages/fluent-ui/package.json
@@ -39,6 +39,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-test-renderer": "^16.9.2",
     "@types/sinon": "^9.0.0",
+    "nanoid": "^3.1.23",
     "react": "^16.13.1",
     "react-dom": "^16.13.0",
     "react-test-renderer": "^16.13.1",
