--- a/packages/semantic-ui/package.json
+++ b/packages/semantic-ui/package.json
@@ -68,6 +68,7 @@
     "mini-css-extract-plugin": "^0.4.3",
     "mocha": "^8.3.2",
     "monaco-editor-webpack-plugin": "^1.7.0",
+    "nanoid": "^3.1.23",
     "np": "^7.4.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
