--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -46,9 +46,9 @@
     "json-schema-merge-allof": "^0.6.0",
     "jsonpointer": "^4.0.1",
     "lodash": "^4.17.15",
+    "nanoid": "^3.1.23",
     "prop-types": "^15.7.2",
-    "react-is": "^16.9.0",
-    "shortid": "^2.2.14"
+    "react-is": "^16.9.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
