Add 2.x migration guide to the docs #2423

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,7 @@ nav:
     - semantic-ui uiSchema Reference: api-reference/themes/semantic-ui/uiSchema.md
     - "&lt;Form /&gt; props": api-reference/form-props.md
   - 3.x Migration: 3.x upgrade guide.md
+  - 2.x Migration: 2.x upgrade guide.md
 
 markdown_extensions:
   - toc:
